// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Migration.migrate creates the index and alias if it does not exist 1`] = `
Object {
  "data": Object {
    ".sample-index-3.2.1-68f3abc960e2627f569c6f6602508d49b3ce8173": Object {
      "migration:migration-state": Object {
        "_source": Object {
          "migration": Object {
            "plugins": Array [
              Object {
                "checksum": "c373e5d9878e2f40700792661ae9e1f683d91af1",
                "id": "p1",
                "mappings": "{\\"p1\\":{\\"properties\\":{\\"name\\":{\\"type\\":\\"text\\"}}}}",
                "migrationIds": Array [
                  "p1m1",
                ],
              },
              Object {
                "checksum": "ba6d64b1f02a5611c45c6d2dd9c951dfd5ea81ee",
                "id": "p2",
                "mappings": "{\\"p2\\":{\\"properties\\":{\\"thing\\":{\\"type\\":\\"text\\"}}}}",
                "migrationIds": Array [
                  "p2m1",
                ],
              },
            ],
            "previousIndex": ".sample-index-3.2.1-original",
            "status": "migrated",
          },
          "type": "migration",
        },
        "_version": 1,
      },
      "p1:sample": Object {
        "_source": Object {
          "p1": Object {
            "name": "P1 Name!",
          },
          "type": "p1",
          "updated_at": undefined,
        },
      },
      "p2:p2doc": Object {
        "_source": Object {
          "p2": Object {
            "thing": "P2 Thingamabob",
          },
          "type": "p2",
          "updated_at": undefined,
        },
      },
    },
    ".sample-index-3.2.1-original": Object {
      "migration:migration-state": Object {
        "_source": Object {
          "migration": Object {
            "plugins": Array [],
            "status": "migrating",
          },
          "type": "migration",
        },
        "_version": 1,
      },
    },
  },
  "meta": Object {
    "aliases": Object {
      ".sample-index": Object {
        ".sample-index-3.2.1-68f3abc960e2627f569c6f6602508d49b3ce8173": Object {
          "aliases": Object {
            ".sample-index": Object {},
          },
        },
      },
    },
    "mappings": Object {
      ".sample-index-3.2.1-68f3abc960e2627f569c6f6602508d49b3ce8173": Object {
        "doc": Object {
          "dynamic": "strict",
          "properties": Object {
            "config": Object {
              "dynamic": true,
              "properties": Object {
                "buildNum": Object {
                  "type": "keyword",
                },
              },
            },
            "migration": Object {
              "properties": Object {
                "plugins": Object {
                  "properties": Object {
                    "checksum": Object {
                      "type": "keyword",
                    },
                    "id": Object {
                      "type": "keyword",
                    },
                    "mappings": Object {
                      "type": "text",
                    },
                    "migrationIds": Object {
                      "type": "keyword",
                    },
                  },
                  "type": "nested",
                },
                "previousIndex": Object {
                  "type": "keyword",
                },
                "status": Object {
                  "type": "keyword",
                },
              },
            },
            "p1": Object {
              "properties": Object {
                "name": Object {
                  "type": "text",
                },
              },
            },
            "p2": Object {
              "properties": Object {
                "thing": Object {
                  "type": "text",
                },
              },
            },
            "type": Object {
              "type": "keyword",
            },
            "updated_at": Object {
              "type": "date",
            },
          },
        },
      },
      ".sample-index-3.2.1-original": Object {
        "doc": Object {
          "dynamic": "strict",
          "properties": Object {
            "config": Object {
              "dynamic": true,
              "properties": Object {
                "buildNum": Object {
                  "type": "keyword",
                },
              },
            },
            "migration": Object {
              "properties": Object {
                "plugins": Object {
                  "properties": Object {
                    "checksum": Object {
                      "type": "keyword",
                    },
                    "id": Object {
                      "type": "keyword",
                    },
                    "mappings": Object {
                      "type": "text",
                    },
                    "migrationIds": Object {
                      "type": "keyword",
                    },
                  },
                  "type": "nested",
                },
                "previousIndex": Object {
                  "type": "keyword",
                },
                "status": Object {
                  "type": "keyword",
                },
              },
            },
            "p1": Object {
              "properties": Object {
                "name": Object {
                  "type": "text",
                },
              },
            },
            "p2": Object {
              "properties": Object {
                "thing": Object {
                  "type": "text",
                },
              },
            },
            "type": Object {
              "type": "keyword",
            },
            "updated_at": Object {
              "type": "date",
            },
          },
        },
      },
    },
    "settings": Object {
      ".sample-index-3.2.1-68f3abc960e2627f569c6f6602508d49b3ce8173": Object {
        "index": Object {
          "number_of_replicas": "1",
          "number_of_shards": "5",
        },
      },
      ".sample-index-3.2.1-original": Object {
        "index": Object {
          "blocks.read_only": false,
          "number_of_replicas": "1",
          "number_of_shards": "5",
        },
      },
    },
  },
}
`;

exports[`Migration.migrate does nothing if there are no migrations defined 1`] = `
Object {
  "data": Object {},
  "meta": Object {
    "aliases": Object {},
    "mappings": Object {},
    "settings": Object {},
  },
}
`;

exports[`Migration.migrate existing indices are converted to aliases and migrated 1`] = `
Object {
  "data": Object {
    ".sample-index-3.2.1-8c706a29446328b77ecc8e8a576d4e3dd9474125": Object {
      "migration:migration-state": Object {
        "_source": Object {
          "migration": Object {
            "plugins": Array [
              Object {
                "checksum": "57a0ebbae37ee90932f26380ffac8dda7d7e47ec",
                "id": "p1",
                "mappings": "{\\"p1\\":{\\"properties\\":{\\"fullName\\":{\\"type\\":\\"text\\"}}}}",
                "migrationIds": Array [
                  "p1m1",
                  "p1m2",
                  "p1m3",
                ],
              },
              Object {
                "checksum": "34c27a6d19234fd78584c97af9f1d243b1c4e8a1",
                "id": "p3",
                "mappings": "{\\"p3\\":{\\"properties\\":{\\"shtuff\\":{\\"type\\":\\"text\\"}}}}",
                "migrationIds": Array [
                  "p3m1",
                  "p3m2",
                ],
              },
            ],
            "previousIndex": ".sample-index-3.2.1-original",
            "status": "migrated",
          },
          "type": "migration",
        },
        "_version": 1,
      },
      "p1:newseedsofcontemplation": Object {
        "_source": Object {
          "p1": Object {
            "fullName": "Thomas Merton",
          },
          "type": "p1",
          "updated_at": undefined,
        },
      },
      "p1:sample": Object {
        "_source": Object {
          "p1": Object {
            "fullName": "P1 Name!",
          },
          "type": "p1",
          "updated_at": undefined,
        },
      },
      "p3:for-old-plugin-1": Object {
        "_source": Object {
          "p3": Object {
            "shtuff": "OLD SHTUFF",
          },
          "type": "p3",
          "updated_at": undefined,
        },
      },
      "p3:p3doc": Object {
        "_source": Object {
          "p3": Object {
            "shtuff": "SHTUFF HAPPENS",
          },
          "type": "p3",
          "updated_at": undefined,
        },
      },
      "shut_the_front_door:2": Object {
        "_source": Object {
          "shut_the_front_door": Object {
            "meaning": 42,
          },
          "type": "shut_the_front_door",
          "updated_at": undefined,
        },
      },
    },
    ".sample-index-3.2.1-original": Object {
      "migration:migration-state": Object {
        "_source": Object {
          "migration": Object {
            "plugins": Array [],
            "status": "migrating",
          },
          "type": "migration",
        },
        "_version": 1,
      },
      "p3:for-old-plugin-1": Object {
        "_source": Object {
          "p3": Object {
            "shtuff": "Old Shtuff",
          },
          "type": "p3",
        },
      },
      "shut_the_front_door:2": Object {
        "_source": Object {
          "shut_the_front_door": Object {
            "meaning": 42,
          },
          "type": "shut_the_front_door",
        },
      },
    },
  },
  "meta": Object {
    "aliases": Object {
      ".sample-index": Object {
        ".sample-index-3.2.1-8c706a29446328b77ecc8e8a576d4e3dd9474125": Object {
          "aliases": Object {
            ".sample-index": Object {},
          },
        },
      },
    },
    "mappings": Object {
      ".sample-index-3.2.1-8c706a29446328b77ecc8e8a576d4e3dd9474125": Object {
        "doc": Object {
          "dynamic": "strict",
          "properties": Object {
            "config": Object {
              "dynamic": true,
              "properties": Object {
                "buildNum": Object {
                  "type": "keyword",
                },
              },
            },
            "migration": Object {
              "properties": Object {
                "plugins": Object {
                  "properties": Object {
                    "checksum": Object {
                      "type": "keyword",
                    },
                    "id": Object {
                      "type": "keyword",
                    },
                    "mappings": Object {
                      "type": "text",
                    },
                    "migrationIds": Object {
                      "type": "keyword",
                    },
                  },
                  "type": "nested",
                },
                "previousIndex": Object {
                  "type": "keyword",
                },
                "status": Object {
                  "type": "keyword",
                },
              },
            },
            "p1": Object {
              "properties": Object {
                "fullName": Object {
                  "type": "text",
                },
              },
            },
            "p3": Object {
              "properties": Object {
                "shtuff": Object {
                  "type": "text",
                },
              },
            },
            "shut_the_front_door": Object {
              "properties": Object {
                "meaning": "integer",
              },
            },
            "type": Object {
              "type": "keyword",
            },
            "updated_at": Object {
              "type": "date",
            },
          },
        },
      },
      ".sample-index-3.2.1-original": Object {
        "doc": Object {
          "properties": Object {
            "migration": Object {
              "properties": Object {
                "plugins": Object {
                  "properties": Object {
                    "checksum": Object {
                      "type": "keyword",
                    },
                    "id": Object {
                      "type": "keyword",
                    },
                    "mappings": Object {
                      "type": "text",
                    },
                    "migrationIds": Object {
                      "type": "keyword",
                    },
                  },
                  "type": "nested",
                },
                "previousIndex": Object {
                  "type": "keyword",
                },
                "status": Object {
                  "type": "keyword",
                },
              },
            },
            "p3": Object {
              "properties": Object {
                "shtuff": "text",
              },
            },
            "shut_the_front_door": Object {
              "properties": Object {
                "meaning": "integer",
              },
            },
            "type": Object {
              "type": "keyword",
            },
          },
        },
      },
    },
    "settings": Object {
      ".sample-index-3.2.1-8c706a29446328b77ecc8e8a576d4e3dd9474125": Object {
        "index": Object {
          "number_of_replicas": undefined,
          "number_of_shards": undefined,
        },
      },
      ".sample-index-3.2.1-original": Object {
        "index": Object {
          "blocks.read_only": false,
          "number_of_replicas": undefined,
          "number_of_shards": undefined,
        },
      },
    },
  },
}
`;

exports[`Migration.migrate existing previously migrated index only runs new migrations 1`] = `
Object {
  "data": Object {
    ".sample-index-3.2.1-1368420e105e4a8265e4757083adf1e4e49901cd": Object {
      "migration:migration-state": Object {
        "_source": Object {
          "migration": Object {
            "plugins": Array [
              Object {
                "checksum": "ba6d64b1f02a5611c45c6d2dd9c951dfd5ea81ee",
                "id": "p2",
                "mappings": "{\\"p2\\":{\\"properties\\":{\\"thing\\":{\\"type\\":\\"text\\"}}}}",
                "migrationIds": Array [
                  "p2m1",
                ],
              },
              Object {
                "checksum": "57a0ebbae37ee90932f26380ffac8dda7d7e47ec",
                "id": "p1",
                "mappings": "{\\"p1\\":{\\"properties\\":{\\"fullName\\":{\\"type\\":\\"text\\"}}}}",
                "migrationIds": Array [
                  "p1m1",
                  "p1m2",
                  "p1m3",
                ],
              },
              Object {
                "checksum": "34c27a6d19234fd78584c97af9f1d243b1c4e8a1",
                "id": "p3",
                "mappings": "{\\"p3\\":{\\"properties\\":{\\"shtuff\\":{\\"type\\":\\"text\\"}}}}",
                "migrationIds": Array [
                  "p3m1",
                  "p3m2",
                ],
              },
            ],
            "previousIndex": ".sample-index-3.2.1-68f3abc960e2627f569c6f6602508d49b3ce8173",
            "status": "migrated",
          },
          "type": "migration",
        },
        "_version": 1,
      },
      "p1:newseedsofcontemplation": Object {
        "_source": Object {
          "p1": Object {
            "fullName": "Thomas Merton",
          },
          "type": "p1",
          "updated_at": undefined,
        },
      },
      "p1:sample": Object {
        "_source": Object {
          "p1": Object {
            "fullName": "This Was Updated",
          },
          "type": "p1",
          "updated_at": undefined,
        },
      },
      "p2:p2doc": Object {
        "_source": Object {
          "p2": Object {
            "thing": "P2 Thingamabob",
          },
          "type": "p2",
          "updated_at": undefined,
        },
      },
      "p3:p3doc": Object {
        "_source": Object {
          "p3": Object {
            "shtuff": "SHTUFF HAPPENS",
          },
          "type": "p3",
          "updated_at": undefined,
        },
      },
    },
    ".sample-index-3.2.1-68f3abc960e2627f569c6f6602508d49b3ce8173": Object {
      "migration:migration-state": Object {
        "_source": Object {
          "migration": Object {
            "plugins": Array [
              Object {
                "checksum": "c373e5d9878e2f40700792661ae9e1f683d91af1",
                "id": "p1",
                "mappings": "{\\"p1\\":{\\"properties\\":{\\"name\\":{\\"type\\":\\"text\\"}}}}",
                "migrationIds": Array [
                  "p1m1",
                ],
              },
              Object {
                "checksum": "ba6d64b1f02a5611c45c6d2dd9c951dfd5ea81ee",
                "id": "p2",
                "mappings": "{\\"p2\\":{\\"properties\\":{\\"thing\\":{\\"type\\":\\"text\\"}}}}",
                "migrationIds": Array [
                  "p2m1",
                ],
              },
            ],
            "previousIndex": ".sample-index-3.2.1-original",
            "status": "migrating",
          },
          "type": "migration",
        },
        "_version": 2,
      },
      "p1:sample": Object {
        "_source": Object {
          "p1": Object {
            "name": "This Was Updated",
          },
          "type": "p1",
        },
        "_version": 1,
      },
      "p2:p2doc": Object {
        "_source": Object {
          "p2": Object {
            "thing": "P2 Thingamabob",
          },
          "type": "p2",
          "updated_at": undefined,
        },
      },
    },
    ".sample-index-3.2.1-original": Object {
      "migration:migration-state": Object {
        "_source": Object {
          "migration": Object {
            "plugins": Array [],
            "status": "migrating",
          },
          "type": "migration",
        },
        "_version": 1,
      },
    },
  },
  "meta": Object {
    "aliases": Object {
      ".sample-index": Object {
        ".sample-index-3.2.1-1368420e105e4a8265e4757083adf1e4e49901cd": Object {
          "aliases": Object {
            ".sample-index": Object {},
          },
        },
      },
    },
    "mappings": Object {
      ".sample-index-3.2.1-1368420e105e4a8265e4757083adf1e4e49901cd": Object {
        "doc": Object {
          "dynamic": "strict",
          "properties": Object {
            "config": Object {
              "dynamic": true,
              "properties": Object {
                "buildNum": Object {
                  "type": "keyword",
                },
              },
            },
            "migration": Object {
              "properties": Object {
                "plugins": Object {
                  "properties": Object {
                    "checksum": Object {
                      "type": "keyword",
                    },
                    "id": Object {
                      "type": "keyword",
                    },
                    "mappings": Object {
                      "type": "text",
                    },
                    "migrationIds": Object {
                      "type": "keyword",
                    },
                  },
                  "type": "nested",
                },
                "previousIndex": Object {
                  "type": "keyword",
                },
                "status": Object {
                  "type": "keyword",
                },
              },
            },
            "p1": Object {
              "properties": Object {
                "fullName": Object {
                  "type": "text",
                },
              },
            },
            "p2": Object {
              "properties": Object {
                "thing": Object {
                  "type": "text",
                },
              },
            },
            "p3": Object {
              "properties": Object {
                "shtuff": Object {
                  "type": "text",
                },
              },
            },
            "type": Object {
              "type": "keyword",
            },
            "updated_at": Object {
              "type": "date",
            },
          },
        },
      },
      ".sample-index-3.2.1-68f3abc960e2627f569c6f6602508d49b3ce8173": Object {
        "doc": Object {
          "dynamic": "strict",
          "properties": Object {
            "config": Object {
              "dynamic": true,
              "properties": Object {
                "buildNum": Object {
                  "type": "keyword",
                },
              },
            },
            "migration": Object {
              "properties": Object {
                "plugins": Object {
                  "properties": Object {
                    "checksum": Object {
                      "type": "keyword",
                    },
                    "id": Object {
                      "type": "keyword",
                    },
                    "mappings": Object {
                      "type": "text",
                    },
                    "migrationIds": Object {
                      "type": "keyword",
                    },
                  },
                  "type": "nested",
                },
                "previousIndex": Object {
                  "type": "keyword",
                },
                "status": Object {
                  "type": "keyword",
                },
              },
            },
            "p1": Object {
              "properties": Object {
                "name": Object {
                  "type": "text",
                },
              },
            },
            "p2": Object {
              "properties": Object {
                "thing": Object {
                  "type": "text",
                },
              },
            },
            "type": Object {
              "type": "keyword",
            },
            "updated_at": Object {
              "type": "date",
            },
          },
        },
      },
      ".sample-index-3.2.1-original": Object {
        "doc": Object {
          "dynamic": "strict",
          "properties": Object {
            "config": Object {
              "dynamic": true,
              "properties": Object {
                "buildNum": Object {
                  "type": "keyword",
                },
              },
            },
            "migration": Object {
              "properties": Object {
                "plugins": Object {
                  "properties": Object {
                    "checksum": Object {
                      "type": "keyword",
                    },
                    "id": Object {
                      "type": "keyword",
                    },
                    "mappings": Object {
                      "type": "text",
                    },
                    "migrationIds": Object {
                      "type": "keyword",
                    },
                  },
                  "type": "nested",
                },
                "previousIndex": Object {
                  "type": "keyword",
                },
                "status": Object {
                  "type": "keyword",
                },
              },
            },
            "p1": Object {
              "properties": Object {
                "name": Object {
                  "type": "text",
                },
              },
            },
            "p2": Object {
              "properties": Object {
                "thing": Object {
                  "type": "text",
                },
              },
            },
            "type": Object {
              "type": "keyword",
            },
            "updated_at": Object {
              "type": "date",
            },
          },
        },
      },
    },
    "settings": Object {
      ".sample-index-3.2.1-1368420e105e4a8265e4757083adf1e4e49901cd": Object {
        "index": Object {
          "number_of_replicas": "1",
          "number_of_shards": "5",
        },
      },
      ".sample-index-3.2.1-68f3abc960e2627f569c6f6602508d49b3ce8173": Object {
        "index": Object {
          "blocks.read_only": false,
          "number_of_replicas": "1",
          "number_of_shards": "5",
        },
      },
      ".sample-index-3.2.1-original": Object {
        "index": Object {
          "blocks.read_only": false,
          "number_of_replicas": "1",
          "number_of_shards": "5",
        },
      },
    },
  },
}
`;

exports[`Migration.migrate migrations will run, if forced even if index is in migrating state 1`] = `
Object {
  "data": Object {
    ".sample-index-3.2.1-68f3abc960e2627f569c6f6602508d49b3ce8173": Object {
      "migration:migration-state": Object {
        "_source": Object {
          "migration": Object {
            "plugins": Array [
              Object {
                "checksum": "c373e5d9878e2f40700792661ae9e1f683d91af1",
                "id": "p1",
                "mappings": "{\\"p1\\":{\\"properties\\":{\\"name\\":{\\"type\\":\\"text\\"}}}}",
                "migrationIds": Array [
                  "p1m1",
                ],
              },
              Object {
                "checksum": "ba6d64b1f02a5611c45c6d2dd9c951dfd5ea81ee",
                "id": "p2",
                "mappings": "{\\"p2\\":{\\"properties\\":{\\"thing\\":{\\"type\\":\\"text\\"}}}}",
                "migrationIds": Array [
                  "p2m1",
                ],
              },
            ],
            "previousIndex": ".sample-index-3.2.1-original",
            "status": "migrated",
          },
          "type": "migration",
        },
        "_version": 1,
      },
      "p1:sample": Object {
        "_source": Object {
          "p1": Object {
            "name": "P1 Name!",
          },
          "type": "p1",
          "updated_at": undefined,
        },
      },
      "p2:p2doc": Object {
        "_source": Object {
          "p2": Object {
            "thing": "P2 Thingamabob",
          },
          "type": "p2",
          "updated_at": undefined,
        },
      },
    },
    ".sample-index-3.2.1-original": Object {
      "migration:migration-state": Object {
        "_source": Object {
          "migration": Object {
            "plugins": Array [],
            "status": "migrating",
          },
          "type": "migration",
        },
        "_version": 1,
      },
    },
  },
  "meta": Object {
    "aliases": Object {
      ".sample-index": Object {
        ".sample-index-3.2.1-68f3abc960e2627f569c6f6602508d49b3ce8173": Object {
          "aliases": Object {
            ".sample-index": Object {},
          },
        },
      },
    },
    "mappings": Object {
      ".sample-index-3.2.1-68f3abc960e2627f569c6f6602508d49b3ce8173": Object {
        "doc": Object {
          "dynamic": "strict",
          "properties": Object {
            "config": Object {
              "dynamic": true,
              "properties": Object {
                "buildNum": Object {
                  "type": "keyword",
                },
              },
            },
            "migration": Object {
              "properties": Object {
                "plugins": Object {
                  "properties": Object {
                    "checksum": Object {
                      "type": "keyword",
                    },
                    "id": Object {
                      "type": "keyword",
                    },
                    "mappings": Object {
                      "type": "text",
                    },
                    "migrationIds": Object {
                      "type": "keyword",
                    },
                  },
                  "type": "nested",
                },
                "previousIndex": Object {
                  "type": "keyword",
                },
                "status": Object {
                  "type": "keyword",
                },
              },
            },
            "p1": Object {
              "properties": Object {
                "name": Object {
                  "type": "text",
                },
              },
            },
            "p2": Object {
              "properties": Object {
                "thing": Object {
                  "type": "text",
                },
              },
            },
            "type": Object {
              "type": "keyword",
            },
            "updated_at": Object {
              "type": "date",
            },
          },
        },
      },
      ".sample-index-3.2.1-original": Object {
        "doc": Object {
          "properties": Object {
            "migration": Object {
              "properties": Object {
                "plugins": Object {
                  "properties": Object {
                    "checksum": Object {
                      "type": "keyword",
                    },
                    "id": Object {
                      "type": "keyword",
                    },
                    "mappings": Object {
                      "type": "text",
                    },
                    "migrationIds": Object {
                      "type": "keyword",
                    },
                  },
                  "type": "nested",
                },
                "previousIndex": Object {
                  "type": "keyword",
                },
                "status": Object {
                  "type": "keyword",
                },
              },
            },
            "type": Object {
              "type": "keyword",
            },
          },
        },
      },
    },
    "settings": Object {
      ".sample-index-3.2.1-68f3abc960e2627f569c6f6602508d49b3ce8173": Object {
        "index": Object {
          "number_of_replicas": undefined,
          "number_of_shards": undefined,
        },
      },
      ".sample-index-3.2.1-original": Object {
        "index": Object {
          "blocks.read_only": false,
          "number_of_replicas": undefined,
          "number_of_shards": undefined,
        },
      },
    },
  },
}
`;
